[project]
name = "rmm2"
version = "1.1.2"
description = "A RimWorld Mod Manager"
authors = [{ name = "Michael Ciociola", email = "michael@ciocio.la"}, { name = "Duong", email = "dotungduong2@gmail.com" }]
requires-python = ">3.8,<4.0"
readme = "README.md"
license = "GPL-3.0-only"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU Affero General Public License v3",
    "Operating System :: OS Independent",
    "Topic :: System :: Archiving :: Packaging",
    "Topic :: Games/Entertainment",
]
dependencies = [
    "beautifulsoup4>=4.12.2,<5",
    "tabulate>=0.9.0,<0.10",
    "networkx~=3.1",
]

[project.urls]
Homepage = "https://github.com/duong-dt/rmm2"
Repository = "https://github.com/duong-dt/rmm2"

[project.scripts]
rmm = "rmm.cli:run"

[dependency-groups]
dev = [
    "pytest>=7.4.2,<8",
    "ruff",
    "mypy>=1.5.1,<2",
    "coverage>=7.3.1,<8",
    "pytest-cov>=4.1.0,<5",
    "bandit>=1.7.5,<2",
    "safety>=2.3.5,<3",
    "python-semantic-release>=8.0.8,<9",
]

[tool.hatch.build.targets.sdist]
include = ["rmm"]

[tool.hatch.build.targets.wheel]
include = ["rmm"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# [tool.semantic_release]
# version_toml = [
#     "pyproject.toml:tool.poetry.version",
# ]
# upload_to_pypi = false
# commit_message = "Release {version}\n\nSee [CHANGELOG.md](./CHANGELOG.md) or [GitHub releases](https://github.com/spoons/rmm/releases) for more details."

#[tool.semantic_release.branches.refactor]
#match="refactor"
#prerelease=false
